minikube/api-service-1/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-1-deployment
  labels:
    app: api-service-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service-1
  template:
    metadata:
      labels:
        app: api-service-1
    spec:
      containers:
        - name: api-service-1-container
          image: saul/api-service-1:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "200Mi"
              cpu: "100m"
            requests:
              memory: "50Mi"
              cpu: "50m"
